--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -28,10 +28,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   equatable: ^2.0.3
+  dartz: ^0.10.0-nullsafety.2
+  internet_connection_checker: ^0.0.1+1
+  get_it: ^7.1.3
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.10
+  bloc_test: ^8.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
