--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,17 @@ dependencies:
   bloc: ^7.0.0
   flutter_bloc: ^7.0.1
 
+  mobx: ^2.0.1
+  flutter_mobx: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.10
   bloc_test: ^8.0.0
+  
+  build_runner: ^2.0.5
+  mobx_codegen: ^2.0.1+3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
