--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   flutter_bloc: ^7.0.1
   get: ^4.1.4
 
+  retrofit: ^2.0.0
+  logger: any
+
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
 
@@ -46,6 +49,7 @@ dev_dependencies:
   
   build_runner: ^2.0.5
   mobx_codegen: ^2.0.1+3
+  retrofit_generator: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
